--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,11 @@ h1, h4 {
 }
 
 #theDie {
+  display: inline-block;
   background-color: #FAFADA;
   border: 2px solid #000000;
   border-radius: 5px;
-  padding: 0;
+  padding: 3px 5px 3px 5px;
   margin: 0;
 }
 
@@ -20,5 +21,9 @@ h1, h4 {
 /*Styling for the Results section of both the Loop and RegEx pages*/
 
 #endgame {
+  display: none;
+}
+
+#controls {
   display: none;
 }
