--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,11 @@ h1, h4 {
   padding: 0 0 0 30px;
 }
 
-#Humanturn {
+#trueturn {
   background-color: #9CFDFF;
 }
 
-#Computerturn {
+#falseturn {
   background-color: #A60098;
   color: white;
 }
