--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,21 @@ h1, h4 {
   text-align: center;
 }
 
+table td{
+  margin: 25px;
+  padding: 25px;
+}
+
+.tictachorizontal {
+  border-bottom: 5px solid #000000;
+}
+
+.tictacvertical {
+  border-left: 5px solid #000000;
+}
+
+
+
 #theDie {
   display: inline-block;
   background-color: #FAFADA;
