--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,11 @@ h1, h4 {
 }
 
 table td{
-  margin: 25px;
-  padding: 25px;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+  width: 60px;
+  height: 60px;
 }
 
 .tictachorizontal {
